--- a/product-detail.html
+++ b/product-detail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Waveless - Modern & Minimal</title>
+  <title>Waveless</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,21 +26,12 @@
   </header>
 
   <main>
-    <section class="hero-section">
-      <div class="container">
-        <h1>Effortless Style, Reimagined.</h1>
-        <p>Discover minimalist fashion for the modern wardrobe.</p>
-        <button class="shop-now-btn">Shop Now</button>
+    <div class="container">
+      <div class="product-detail-container">
+        <!-- Product detail will be dynamically inserted here by main.js -->
+        <p>Loading product...</p>
       </div>
-    </section>
-
-    <section class="product-section">
-      <div class="container">
-        <div id="product-list">
-          <!-- Products will be dynamically inserted here by main.js -->
-        </div>
-      </div>
-    </section>
+    </div>
   </main>
   
   <dialog id="login-modal">
