--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
     </form>
   </dialog>
 
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 
 </body>
 </html>
