Feat: 기존 기능 유지하며 유저 이름 표시 추가

--- a/cart.html
+++ b/cart.html
@@ -16,10 +16,11 @@
         <a href="#">Women</a>
       </nav>
       <div class="header-actions">
+        <span id="user-name-display" style="margin-right: 15px; font-weight: 500; display: none;"></span>
         <button id="login-btn">Login</button>
         <a href="cart.html" class="cart-link">
           Cart
-          <span class="badge">0</span>
+          <span class="badge" style="display: none;">0</span>
         </a>
       </div>
     </div>
