Fix: 상세페이지 장바구니 클릭 시 로그인/회원가입 전환 기능 복구

--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
         <a href="#">Women</a>
       </nav>
       <div class="header-actions">
-        <span id="user-name-display" style="margin-right: 15px; font-weight: 500; display: none;"></span>
+        <span id="user-name-display" style="margin-right: 15px; font-weight: 600; color: #333; display: none;"></span>
         <button id="login-btn">Login</button>
         <a href="cart.html" class="cart-link">
           Cart
