--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#">Women</a>
       </nav>
       <div class="header-actions">
-        <span id="user-name-display" style="margin-right: 15px; font-weight: 500; display: none;"></span>
+        <span id="user-name-display" style="margin-right: 15px; font-weight: 600; color: #333; display: none;"></span>
         <button id="login-btn">Login</button>
         <a href="cart.html" class="cart-link">
           Cart
