Design: 첫 번째 상품 이미지 교체 (lhc gmn.png)

--- a/product-detail.html
+++ b/product-detail.html
@@ -41,12 +41,11 @@
           <p id="product-desc"></p>
           
           <div class="size-selector">
-            <label for="size">Size:</label>
-            <select name="size" id="size">
+            <label for="product-size">Size:</label>
+            <select name="size" id="product-size">
               <option value="S">S</option>
               <option value="M">M</option>
               <option value="L">L</option>
-              <option value="XL">XL</option>
             </select>
           </div>
 
