Fix: 상세페이지 수정

--- a/product-detail.html
+++ b/product-detail.html
@@ -55,6 +55,14 @@
           </div>
         </div>
       </div>
+
+      <div id="detail-view-section" style="display: none;">
+          <h3>Detail View</h3>
+          <p id="product-long-desc"></p>
+          <div id="extra-images-container">
+              <!-- Extra images will be inserted here by JS -->
+          </div>
+      </div>
     </div>
 </main>
   
