Final: Men/Women 카테고리 페이지 구축 및 상품 필터링 완벽 구현

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
       <a href="index.html" class="logo">Waveless</a>
       <nav class="main-nav">
-        <a href="#">Men</a>
-        <a href="#">Women</a>
+        <a href="men.html">Men</a>
+        <a href="women.html">Women</a>
       </nav>
       <div class="header-actions">
         <span id="user-name-display" style="margin-right: 15px; font-weight: 600; color: #333; display: none;"></span>
